--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ xcuserdata/
 *.dSYM
 
 # CocoaPods
+Pods
+Podfile.lock
 #
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
